added Academics, Awards & Results

--- a/css/custom.css
+++ b/css/custom.css
@@ -34,15 +34,18 @@ bg_data {
 .box_1 {
     transition: .4s;
     box-shadow: 4px 12px 17px rgba(209, 54, 54, 0.616);
+    height: 100%;
 }
 
 .box_2 {
     transition: .4s;
     box-shadow: 4px 12px 17px rgba(184, 169, 35, 0.616);
+    height: 100%;
 }
 
 .box_3 {
     box-shadow: 4px 12px 17px rgba(33, 179, 130, 0.637);
+    height: 100%;
 }
 
 .box_1:hover {
@@ -95,7 +98,4 @@ bg_data {
 .testimonial {
     margin: 20px;
     height: 100%;
-}
-
-
 }
